Fixed the team scroller section issue on smaller screens again

--- a/src/css/hnc_team.scss
+++ b/src/css/hnc_team.scss
@@ -136,6 +136,22 @@
       }
     }
   }
+  @media (max-width: 375px) {
+    .card {
+      height: 295px;
+      width: 175px;
+      img {
+        width: auto;
+        height: 140px;
+      }
+      .card-title {
+        font-size: 1.1rem;
+      }
+      .card-text {
+        font-size: 1rem;
+      }
+    }
+  }
 }
 #HnCScroller::-webkit-scrollbar {
   height: 0px;
